# analysis_lib

./: .gitignore  CMakeLists.txt  README.md
examples/: simple_analysis.cpp
include/NowAnalysis/: Client.hpp  DaemonManager.hpp  NowAnalysis.hpp  Types.hpp
